# ffmpegaacsucks

./: Containerfile  Containerfile.aarch64  README.md  ffmpegaacsucks.c  ffmpegaacsucks.h  libffmpegaacsucks.c  libffmpegaacsucks.h  meson.build  version.h.in
.github/workflows/: ci.yml
ci/: aarch64-chimera-linux-musl.txt  aarch64-unknown-linux-musl.txt  build.sh  riscv64-chimera-linux-musl.txt  x86_64-unknown-linux-musl.txt
include/: ffmpegaacsucks.h
